2006-12-20  Keishi Suenaga <skeishi@yahoo.co.jp>

	* timidity/midi_a.c: windows compilers support.
	* timidity/effect.c: remove duplicate definitions.

2006-12-18  Keishi Suenaga <skeishi@yahoo.co.jp>

	* timidity/midi_a.c:  u_int8_t  must be uint8_t.
	* timidity/flac_a.c:  fix for mingw.

2006-12-18  Keishi Suenaga <skeishi@yahoo.co.jp>

	* autoconf/ogg.m4: from libogg-1.1.3.tar.gz
	* autoconf/vorbis.m4: from libvorbis-1.1.2.tar.gz
	* timidity/portaudio_a.c: bug fix

2006-12-14  Stas Sergeev <stsp@aknet.ru>

	* interface/server_c.c: extend midi protocol.
	* timidity/midi_a.c: new file.

2006-12-13  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* timidity/flac_a.c: merge patch from FLAC team.
	* interface/xaw_i.c: merge patch fixing gcc4 compilation problem.
	* interface/alsaseq_c.c, interface/emacs_c.c, interface/gtk_c.c,
	  interface/mac_c.c, interface/motif_c.c, interface/ncurs_c.c,
	  interface/portmidisyn_c.c, interface/server_c.c,
	  interface/tk_c.c, interface/w32g_c.c, interface/w32g_syn.c,
	  interface/winsyn_c.c, interface/xaw_c.c, interface/xskin_c.c,
	  timidity/controls.h, timidity/playmidi.c, timidity/playmidi.h,
	  timidity/sndfont.c, timidity/timidity.c:
	  propagate return code

2006-07-27  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

        * timidity/timidity.c (open_file): Fix coredump when random play.
          (free files problem);

2006-06-02  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/common.c (open_file): Ignore directories only when
	  loading a GUS/patch instrument in order to avoid the trouble
	  in {gtk,motif,tcltk} interface and WRD display
	* timidity/timidity.c (main): Revert fix supplying suffix '/'
	  to each argv elements when the path *is* a directory but
	  *is not* suffixed by '/'

2006-05-31  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/instrum.c, timidity/readmidi.c:
	  Revert and fix around alternate assign

2006-05-28  TAMUKI Shoichi <tamuki@linet.gr.jp>
